3-igw.tf
resource "aws_internet_gateway" "gw" {
  vpc_id = aws_vpc.dorsey.id

  tags = {
    Name = "dorsey"
  }
}
